--- a/app/assets/javascripts/templates/activity.hbs
+++ b/app/assets/javascripts/templates/activity.hbs
@@ -5,21 +5,7 @@
     <div class="panel-body">        
       <a href="#" class="btn btn-danger pull-right" {{action "delete" this}}>Delete</a>
       <h2>{{exercise.name}}</h2>
-      {{#if exercise.reps}}
-        <p>Reps: {{reps}}</p>
-      {{/if}}
-      {{#if exercise.distance}}
-        <p>Distance: {{distance}}</p>
-      {{/if}}
-      {{#if exercise.duration}}
-        <p>Duration: {{duration}}</p>
-      {{/if}}
-      {{#if exercise.calories}}
-        <p>Calories: {{calories}}</p>
-      {{/if}}
-      {{#if exercise.weight}}
-        <p>Weigth: {{weight}}</p>
-      {{/if}}
+      <p>{{exercise.metric.name}}: {{value}}</p>
       <p>Created At: {{date createdAt}}</p>
     </div>
   </div>
