--- a/app/assets/javascripts/templates/activity/edit.hbs
+++ b/app/assets/javascripts/templates/activity/edit.hbs
@@ -9,52 +9,13 @@
   </div>
   <br />
   <div class="row activity-edit">
+    {{!-- Change to value if ever used --}}
     {{#if useReps}}
     <div {{bind-attr class=":form-group errors.reps:has-error:"}}>
       <label class= "col-sm-3 control-label">Reps</label>
       <div class="col-sm-9">
         {{input value=reps name="Reps" classNames="form-control" placeholder=selectedExercise.measurement}}
         {{#if errors.reps}}<span class="help-block">{{errors.reps}}</span>{{/if}}
-      </div>
-    </div>
-    {{/if}}
-
-    {{#if useDistance}}
-    <div {{bind-attr class=":form-group errors.distance:has-error:"}}>
-      <label class= "col-sm-3 control-label">Distance</label>
-      <div class="col-sm-9">
-        {{input value=distance name="Distance" classNames="form-control" placeholder=selectedExercise.measurement}}
-        {{#if errors.distance}}<span class="help-block">{{errors.distance}}</span>{{/if}}
-      </div>
-    </div>
-    {{/if}}
-
-    {{#if useDuration}}
-    <div {{bind-attr class=":form-group errors.duration:has-error:"}}>
-      <label class= "col-sm-3 control-label">Duration</label>
-      <div class="col-sm-9">
-        {{input value=duration name="Duration" classNames="form-control" placeholder=selectedExercise.measurement}}
-        {{#if errors.duration}}<span class="help-block">{{errors.duration}}</span>{{/if}}
-      </div>
-    </div>
-    {{/if}}
-
-    {{#if useCalories}}
-    <div {{bind-attr class=":form-group errors.calories:has-error:"}}>
-      <label class= "col-sm-3 control-label">Calories</label>
-      <div class="col-sm-9">
-        {{input value=calories name="Calories" classNames="form-control" placeholder=selectedExercise.measurement}}
-        {{#if errors.calories}}<span class="help-block">{{errors.calories}}</span>{{/if}}
-      </div>
-    </div>
-    {{/if}}
-
-    {{#if useWeight}}
-    <div {{bind-attr class=":form-group errors.weight:has-error:"}}>
-      <label class= "col-sm-3 control-label">Weight</label>
-      <div class="col-sm-9">
-        {{input value=weight name="Weight" classNames="form-control" placeholder=selectedExercise.measurement}}
-        {{#if errors.weight}}<span class="help-block">{{errors.weight}}</span>{{/if}}
       </div>
     </div>
     {{/if}}
