--- a/app/assets/javascripts/templates/contact.hbs
+++ b/app/assets/javascripts/templates/contact.hbs
@@ -1,24 +1,19 @@
 <div class="row">
   <div class="col-md-2">
   </div>
-
   <div class="col-md-8">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title">Contact Us</h3>
       </div>
       <div class="panel-body">
+
         <form {{action 'create' this on='submit'}}>
           <div class="row">
-            <div {{bind-attr class=":form-group errors.name:has-error:"}}>
+            <div {{bind-attr class=":form-group"}}>
               <label class= "col-sm-4 control-label">Name</label>
               <div class="col-sm-8">
-                {{input value=this.model.name classNames="form-control" name="Name"}}
-                {{#if errors.name}}
-                  {{#each errors.name}}
-                    <span class="help-block">Name {{this.message}}</span>
-                  {{/each}}
-                {{/if}}
+                {{input value=model.name classNames="form-control" name="Name"}}
               </div>
             </div>
           </div>
@@ -29,10 +24,10 @@
             <div {{bind-attr class=":form-group errors.email:has-error:"}}>
               <label class= "col-sm-4 control-label">Email</label>
               <div class="col-sm-8">
-                {{input value=this.model.email classNames="form-control" name="Email"}}
+                {{input value=model.email classNames="form-control" name="Email"}}
                 {{#if errors.email}}
                   {{#each errors.email}}
-                    <span class="help-block">Start date {{this.message}}</span>
+                    <span class="help-block">Email {{this.message}}</span>
                   {{/each}}
                 {{/if}}
               </div>
@@ -42,21 +37,21 @@
           <br />
 
           <div class="row">
-            <div class="form-group">
+            <div {{bind-attr class=":form-group errors.subject:has-error:"}}>
               <label class= "col-sm-4 control-label">Subject</label>
               <div class="col-sm-8">
-                {{input value=this.model.subject classNames="form-control" name="Subject"}}
+                {{input value=model.subject classNames="form-control" name="Subject"}}
               </div>
             </div>
           </div>
 
           <br />
-
+    
           <div class="row">
-            <div class="form-group">
+            <div {{bind-attr class=":form-group  errors.subject:has-error"}}>
               <label class= "col-sm-4 control-label">Content</label>
               <div class="col-sm-8">
-                {{textarea value=this.model.content classNames="form-control" name="Content" rows=10}}
+                {{textarea value=model.content classNames="form-control" name="Content" rows=10}}
               </div>
             </div>
           </div>
