--- a/app/assets/javascripts/templates/challenge.hbs
+++ b/app/assets/javascripts/templates/challenge.hbs
@@ -13,36 +13,27 @@
         <tr>
           <td><strong>Description</strong></td>
           <td>{{description}}</td>
-        </tr>
-        <tr>
-          <td><strong>Exercise</strong></td>
-          <td>{{this.exercise.name}}</td>
-        </tr>                     
+        </tr>                   
       </table>        
     </div>
   </div>
     
   <div class="col-md-6">
     <div class="panel panel-danger">
-      <div class="panel-heading"><h3 class="panel-title">Actions</h3></div>
+      <div class="panel-heading"><h3 class="panel-title">Log Attempt</h3></div>
       <ul class="list-group">      
-        <li class="list-group-item">
-          <button class="btn btn-default btn-block"{{action "startAttempt"}}>Attempt this challenge</button>
-        </li>
-        {{#if isAttempting}}
         <li class="list-group-item">
           <div class="row">
             <div class="form-group">
               <label class= "col-sm-3 control-label">Result</label>
               <div class="col-sm-9">
-                {{input value=result classNames="form-control" placeholder=this.exercise.metric.name}}
+                {{input value=result classNames="form-control" placeholder=this.metric.name}}
               </div>
             </div>
           </div>
           <br />
           <button class="btn btn-default btn-block"{{action "createAttempt"}}>Record Result</button>
         </li>
-        {{/if}}
       </ul>
     </div>
   </div> 
@@ -50,17 +41,15 @@
 
 <div class="panel panel-danger">
   <div class="panel-heading"><h3 class="panel-title">Leaderboard</h3></div>
-  <ul class="list-group"> 
-    {{controller.model.challengeAttempts}}
-    {{#each controller.model.challengeAttempts}}     
-      <li class="list-group-item">
-        {{this.result}}
-        {{this.user.email}} 
-      </li>
-    {{else}}
-      <li class="list-group-item">
-        There are no attempts for this challenge. Be the first!
-      </li>
-    {{/each}}
-  </ul>
+  <table class="table">
+    {{#each controller.model.challengeAttempts}}
+      {{this.isDirty}}
+    <tr>
+      <td><strong>Result</strong></td>
+      <td>{{this.result}}</td>
+      <td><strong>User</strong></td>
+      <td>{{this.user.email}}</td>
+    </tr>
+    {{/each}}                    
+  </table>        
 </div>
