--- a/app/assets/javascripts/templates/challenge/edit.hbs
+++ b/app/assets/javascripts/templates/challenge/edit.hbs
@@ -1,4 +1,6 @@
-<div class="panel panel-danger">
+<h1>Coming Soon!</h1>
+
+{{!-- <div class="panel panel-danger">
   <div class="panel-heading">
     <h3 class="panel-title">Challenge Settings</h3>
   </div>
@@ -22,6 +24,6 @@
       </div>
     </div>
   </div>
-</div>
+</div> --}}
 
 
