--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -4,7 +4,7 @@
       <div class="panel-heading">
         {{#link-to 'profile' currentUser}}<h3 class="panel-title">Profile</h3>{{/link-to}}
       </div>
-      <div class="list-group">
+      <div class="list-group profile-navigation">
         {{#link-to "activities" class="list-group-item"}}
           <span class="badge"><span class="glyphicon glyphicon-certificate"></span></span>
           Activities
