--- a/app/assets/javascripts/templates/challenge.hbs
+++ b/app/assets/javascripts/templates/challenge.hbs
@@ -16,23 +16,7 @@
   </div>
     
   <div class="col-md-6">
-    <div class="panel panel-danger">
-      <div class="panel-heading"><h3 class="panel-title">Log Attempt</h3></div>
-      <ul class="list-group">      
-        <li class="list-group-item">
-          <div class="row">
-            <div class="form-group">
-              <label class= "col-sm-3 control-label">Result</label>
-              <div class="col-sm-9">
-                {{input name="Result" value=result classNames="form-control" placeholder=this.metric.name}}
-              </div>
-            </div>
-          </div>
-          <br />
-          <button class="btn btn-default btn-block"{{action "createAttempt"}}>Record Result</button>
-        </li>
-      </ul>
-    </div>
+    {{render 'challenge.newAttempt' }}
   </div> 
 </div>
 
