--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -3,6 +3,36 @@
     <h3 class="panel-title">Competition Settings</h3>
   </div>
   <div class="panel-body">
+    {{#form-for model}}
+    {{input name}}
+    {{input competitionWinCondition label="Win Condition" as='select'
+      collection='exercises'
+      selection="competitionWinCondition"
+      optionValuePath="content.id"
+      optionLabelPath="content.name"
+      prompt="Select a win condition"}}
+    {{view Ember.Select
+      contentBinding="winConditions"
+      valueBinding="categorySelected"
+      optionLabelPath="content.title"
+      optionValuePath="content.id"
+      prompt="Please select a category"
+      class="form-control"
+    }}
+    {{input startDate as='datePicker'}}
+    {{input endDate as='datePicker'}}
+    {{input maxParticipants}}
+    {{input description as="text"}}
+    <br />
+    {{submit class="btn btn-primary"}}
+    {{/form-for}}
+  </div>
+</div>
+{{!-- <div class="panel panel-danger">
+  <div class="panel-heading">
+    <h3 class="panel-title">Competition Settings</h3>
+  </div>
+  <div class="panel-body">
     <form {{action 'create' this on='submit'}}>
       <div class="row">
         <div {{bind-attr class=":form-group errors.name:has-error:"}}>
@@ -10,9 +40,7 @@
           <div class="col-sm-8">
             {{input value=this.model.name classNames="form-control" name="Name"}}
             {{#if errors.name}}
-              {{#each errors.name}}
-                <span class="help-block">Name {{this.message}}</span>
-              {{/each}}
+              <span class="help-block">{{errors.name}}</span>
             {{/if}}
           </div>
         </div>
@@ -33,9 +61,7 @@
               class="form-control" 
               prompt="Please select a win condition"}}
             {{#if errors.competitionWinCondition}}
-              {{#each errors.competitionWinCondition}}
-                <span class="help-block">Win condition {{this.message}}</span>
-              {{/each}}
+              <span class="help-block">{{errors.competitionWinCondition}}</span>
             {{/if}}
           </div>
         </div>
@@ -49,9 +75,7 @@
           <div class="col-sm-8">
             {{view WorkoutWars.DateField value=startDate classNames="form-control" name="Start Date"}}
             {{#if errors.startDate}}
-              {{#each errors.startDate}}
-                <span class="help-block">Start date {{this.message}}</span>
-              {{/each}}
+              <span class="help-block">{{errors.startDate}}</span>
             {{/if}}
           </div>
         </div>
@@ -65,9 +89,7 @@
           <div class="col-sm-8">
             {{view WorkoutWars.DateField value=endDate classNames="form-control" name="End Date"}}
             {{#if errors.endDate}}
-              {{#each errors.endDate}}
-                <span class="help-block">Start date {{this.message}}</span>
-              {{/each}}
+              <span class="help-block">{{errors.endDate}}</span>
             {{/if}}
           </div>
         </div>
@@ -118,3 +140,4 @@
     </form>
   </div>
 </div>
+ --}}
