--- a/app/assets/javascripts/templates/challenge.hbs
+++ b/app/assets/javascripts/templates/challenge.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-12">
     <div class="panel panel-danger">
       <div class="panel-heading"><h3 class="panel-title">Information</h3></div>
       <table class="table">
@@ -11,13 +11,11 @@
           <td><strong>Description</strong></td>
           <td>{{description}}</td>
         </tr>                   
-      </table>        
+      </table>  
+        {{#link-to 'challenge.newAttempt' class="btn btn-primary"}}New Attempt{{/link-to}}
+        {{outlet}}      
     </div>
   </div>
-    
-  <div class="col-md-6">
-    {{render 'challenge.newAttempt' }}
-  </div> 
 </div>
 
 <div class="panel panel-danger">
