--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -3,141 +3,23 @@
     <h3 class="panel-title">Competition Settings</h3>
   </div>
   <div class="panel-body">
-    {{#form-for model}}
-    {{input name}}
-    {{input competitionWinCondition label="Win Condition" as='select'
-      collection='exercises'
-      selection="competitionWinCondition"
-      optionValuePath="content.id"
-      optionLabelPath="content.name"
-      prompt="Select a win condition"}}
-    {{view Ember.Select
-      contentBinding="winConditions"
-      valueBinding="categorySelected"
-      optionLabelPath="content.title"
-      optionValuePath="content.id"
-      prompt="Please select a category"
-      class="form-control"
-    }}
-    {{input startDate as='datePicker'}}
-    {{input endDate as='datePicker'}}
-    {{input maxParticipants}}
-    {{input description as="text"}}
-    <br />
-    {{submit class="btn btn-primary"}}
+    {{#form-for model wrapper="bootstrap"}}
+      {{input name}}
+      <label class= "control-label">Win Condition</label>
+      {{view Ember.Select 
+                name="Win Condition Select"
+                content=winConditions  
+                value=this.model.competitionWinCondition
+                optionValuePath="content" 
+                optionLabelPath='content.name' 
+                class="form-control" 
+                prompt="Please select a win condition"}}
+      {{input startDate as='datePicker'}}
+      {{input endDate as='datePicker'}}
+      {{input maxParticipants}}
+      {{input description as="text"}}
+      <br />
+      {{submit class="btn btn-primary"}}
     {{/form-for}}
   </div>
 </div>
-{{!-- <div class="panel panel-danger">
-  <div class="panel-heading">
-    <h3 class="panel-title">Competition Settings</h3>
-  </div>
-  <div class="panel-body">
-    <form {{action 'create' this on='submit'}}>
-      <div class="row">
-        <div {{bind-attr class=":form-group errors.name:has-error:"}}>
-          <label class= "col-sm-4 control-label">Name</label>
-          <div class="col-sm-8">
-            {{input value=this.model.name classNames="form-control" name="Name"}}
-            {{#if errors.name}}
-              <span class="help-block">{{errors.name}}</span>
-            {{/if}}
-          </div>
-        </div>
-      </div>
-
-      <br />
-
-      <div class="row">
-        <div {{bind-attr class=":form-group errors.competitionWinCondition:has-error:"}}>
-          <label class= "col-sm-4 control-label">Win Condition</label>
-          <div class="col-sm-8">
-            {{view Ember.Select 
-              name="Win Condition Select"
-              content=winConditions  
-              value=selectedWinCondition 
-              optionValuePath="content" 
-              optionLabelPath='content.name' 
-              class="form-control" 
-              prompt="Please select a win condition"}}
-            {{#if errors.competitionWinCondition}}
-              <span class="help-block">{{errors.competitionWinCondition}}</span>
-            {{/if}}
-          </div>
-        </div>
-      </div>
-
-      <br />
-
-      <div class="row">
-        <div {{bind-attr class=":form-group errors.startDate:has-error:"}}>
-          <label class= "col-sm-4 control-label">Start Date</label>
-          <div class="col-sm-8">
-            {{view WorkoutWars.DateField value=startDate classNames="form-control" name="Start Date"}}
-            {{#if errors.startDate}}
-              <span class="help-block">{{errors.startDate}}</span>
-            {{/if}}
-          </div>
-        </div>
-      </div>
-
-      <br />
-
-      <div class="row">
-        <div {{bind-attr class=":form-group errors.endDate:has-error:"}}>
-          <label class= "col-sm-4 control-label">End Date</label>
-          <div class="col-sm-8">
-            {{view WorkoutWars.DateField value=endDate classNames="form-control" name="End Date"}}
-            {{#if errors.endDate}}
-              <span class="help-block">{{errors.endDate}}</span>
-            {{/if}}
-          </div>
-        </div>
-      </div>
-
-      <br />
-
-      <div class="row">
-        <div class="form-group">
-          <label class= "col-sm-4 control-label">Max Participants</label>
-          <div class="col-sm-8">
-            {{input value=this.model.maxParticipants classNames="form-control" name="Max Participants"}}
-          </div>
-        </div>
-      </div>
-
-      <br />
-
-      <div class="row">
-        <div class="form-group">
-          <label class= "col-sm-4 control-label">Description</label>
-          <div class="col-sm-8">
-            {{view Ember.TextArea value=this.model.description classNames="form-control" name="Description"}}
-          </div>
-        </div>
-      </div>
-
-      <br />
-
-      <div class="row">
-        <div class="form-group">
-          <label class= "col-sm-4 control-label">Private</label>
-          <div class="col-sm-8">
-            {{view Ember.Checkbox checkedBinding="isPrivate"}}
-          </div>
-        </div>
-      </div>
-
-      <br />
-
-      <div class="row">
-        <div class="form-group">
-          <div class="col-sm-offset-4 col-sm-8">
-            <button class="btn btn-success btn-block">Save</button>
-          </div>      
-        </div>
-      </div>
-    </form>
-  </div>
-</div>
- --}}
