--- a/app/assets/javascripts/templates/contact.hbs
+++ b/app/assets/javascripts/templates/contact.hbs
@@ -7,69 +7,14 @@
         <h3 class="panel-title">Contact Us</h3>
       </div>
       <div class="panel-body">
-
-        <form {{action 'create' this on='submit'}}>
-          <div class="row">
-            <div {{bind-attr class=":form-group"}}>
-              <label class= "col-sm-4 control-label">Name</label>
-              <div class="col-sm-8">
-                {{input value=model.name classNames="form-control" name="Name"}}
-              </div>
-            </div>
-          </div>
-
+        {{#form-for model wrapper="bootstrap"}}
+          {{input name}}
+          {{input email type="email"}}
+          {{input subject}}
+          {{input content as="text"}}
           <br />
-
-          <div class="row">
-            <div {{bind-attr class=":form-group model.errors.email:has-error:"}}>
-              <label class= "col-sm-4 control-label">Email</label>
-              <div class="col-sm-8">
-                {{input value=model.email classNames="form-control" name="Email"}}
-                {{#if model.errors.email}}
-                  <span class="help-block">{{model.errors.email}}</span>             
-                {{/if}}
-              </div>
-            </div>
-          </div>
-
-          <br />
-
-          <div class="row">
-            <div {{bind-attr class=":form-group model.errors.subject:has-error:"}}>
-              <label class= "col-sm-4 control-label">Subject</label>
-              <div class="col-sm-8">
-                {{input value=model.subject classNames="form-control" name="Subject"}}
-                {{#if model.errors.subject}}
-                  <span class="help-block">{{model.errors.subject}}</span>             
-                {{/if}}
-              </div>
-            </div>
-          </div>
-
-          <br />
-    
-          <div class="row">
-            <div {{bind-attr class=":form-group  model.errors.content:has-error"}}>
-              <label class= "col-sm-4 control-label">Content</label>
-              <div class="col-sm-8">
-                {{textarea value=model.content classNames="form-control" name="Content" rows=10}}
-                {{#if model.errors.content}}
-                  <span class="help-block">{{model.errors.content}}</span>             
-                {{/if}}
-              </div>
-            </div>
-          </div>
-
-          <br />
-
-          <div class="row">
-            <div class="form-group">
-              <div class="col-sm-offset-4 col-sm-8">
-                <button class="btn btn-success btn-block">Save</button>
-              </div>      
-            </div>
-          </div>
-        </form>
+          {{submit class="btn btn-primary"}}
+        {{/form-for}}       
       </div>
     </div>
   </div>
