--- a/app/assets/javascripts/templates/competitions/create.hbs
+++ b/app/assets/javascripts/templates/competitions/create.hbs
@@ -3,7 +3,7 @@
     <h3 class="panel-title">Competition Settings</h3>
   </div>
   <div class="panel-body">
-    <label class= "control-label">Select New Win Condition</label>
+    <label class= "control-label">Win Condition</label>
     {{view Ember.Select 
           name="Win Condition Select"
           content=winConditions  
