--- a/app/assets/javascripts/templates/log_activity.hbs
+++ b/app/assets/javascripts/templates/log_activity.hbs
@@ -11,7 +11,7 @@
     {{/if}}
   </div>
   <div class="modal-footer">
-    {{submit class="btn btn-primary"}}
+    {{submit "Log it!" id="logActivity" class="btn btn-primary"}}
   </div>
 {{/form-for}} 
 <a href="#" class="btn" name="Close" {{action "close" target="view"}}>Close</a>
