--- a/app/assets/javascripts/templates/profile/edit.hbs
+++ b/app/assets/javascripts/templates/profile/edit.hbs
@@ -72,7 +72,7 @@
     <div class="row">
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <input {{action "saveUser"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
+          <input {{action "saveUser"}} type="submit" class="btn btn-lg btn-block btn-success" value="Submit" />
         </div>
       </div>
     </div>
