--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -5,13 +5,13 @@
   <% end %>
 <% end %>
 <% if flash[:notice] %>
-  <%= content_tag :div, class: "alert alert-danger alert-dismissable" do %>
+  <%= content_tag :div, class: "alert alert-info alert-dismissable" do %>
     <button class="close" aria-hidden="true" data-dismiss="alert" type="button">&times;</button>
     <%= flash[:notice] %>
   <% end %>
 <% end %>
 <% if flash[:alert] %>
-  <%= content_tag :div, class: "alert alert-danger alert-dismissable" do %>
+  <%= content_tag :div, class: "alert alert-warning alert-dismissable" do %>
     <button class="close" aria-hidden="true" data-dismiss="alert" type="button">&times;</button>
     <%= flash[:alert] %>
   <% end %>
