--- a/app/assets/javascripts/templates/profile/stats.hbs
+++ b/app/assets/javascripts/templates/profile/stats.hbs
@@ -3,6 +3,6 @@
     <h3 class="panel-title">Stats</h3>
   </div>
   <div class="panel-body">
-    <p>Coming soon</p>
+    {{view WorkoutWars.UserStatView}}
   </div>
 </div>
