--- a/app/assets/javascripts/templates/challenge.hbs
+++ b/app/assets/javascripts/templates/challenge.hbs
@@ -26,7 +26,7 @@
         <td><strong>Result</strong></td>
         <td>{{this.result}}</td>
         <td><strong>User</strong></td>
-        <td>{{this.user.email}}</td>
+        <td>{{this.user.handle}}</td>
         <td><a href="#" class="btn btn-danger btn-xs" {{action "deleteAttempt" this }}>&times;</a></td>
       </tr>
     {{else}}
