--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -21,7 +21,7 @@
       <tbody>
       {{#each user in controller}}
       <tr>
-        <td>{{user.email}}</td>
+        <td>{{user.handle}}</td>
         <td><span class="badge">{{user.level}}</span></td>               
         <td><span class="badge">{{user.experience}}</span></td>
       </tr>
