--- a/app/assets/javascripts/templates/_unstarted_competition.hbs
+++ b/app/assets/javascripts/templates/_unstarted_competition.hbs
@@ -11,7 +11,7 @@
         </tr>
         <tr>
           <td><strong>Creator</strong></td>
-          <td>{{user.email}}</td>
+          <td>{{user.handle}}</td>
         </tr>
         <tr>
           <td><strong>Start Date</strong></td>
@@ -113,7 +113,7 @@
             <li class="list-group-item">
               <div class="row">
                 <div class="col-md-8">
-                  {{compJoin.user.email}}
+                  {{compJoin.user.handle}}
                 </div>
                 <div class="col-md-4">
                   {{#if canUpdate}}
