--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,48 +39,13 @@
   </div>
 
   <br />
+  
   <div class="row">
     <div class="terms col-sm-9 col-sm-offset-3">
-      <h4 class="text-center">– PRIVACY POLICY –</h4>
-
-      <p>Your privacy is critically important to us. At Workout-Wars we have a few fundamental principles:</p> 
-
-      <ul>
-        <li>We don’t ask you for personal information unless we truly need it.</li>
-        <li>We don’t share your personal information with anyone except to comply with the law, develop our products, orprotect our rights.</li>
-      </ul>
-
-      <p>Below is our privacy policy which incorporates these goals: </p>
-      
-      <h5>Website Visitors </h5>
-
-      <p>Like most website operators, Workout-Wars collects non-personally-identifying information of the sort that web browsers and servers typically make available, such as the browser type, language preference, referring site, and the date and time of each visitor request. Workout-Wars purpose in collecting non-personally identifying information is to better understand how Workout-Wars visitors use its website. From time to time, Workout-Wars may release non-personally-identifying information in the aggregate, e.g., by publishing a report on trends in the usage of its website.</p>
-      
-      <p>Workout-Wars also collects potentially personally-identifying information like Internet Protocol (IP) addresses for logged in users and for users leaving comments on the site. Workout-Wars only discloses logged in user and commenter IP addresses under the same circumstances that it uses and discloses personally-identifying information as described below, except that user feedback comments, commenter IP addresses and email addresses are visible and disclosed to the administrators of Workout-Wars.</p>
-
-      <h5>Gathering of Personally-Identifying Information</h5>
-      <p>Certain visitors to Workout-Wars choose to interact with Workout-Wars in ways that require Workout-Wars to gather personally-identifying information. The amount and type of information that Workout-Wars gathers depends on the nature of the interaction. Workout-Wars collects such information only insofar as is necessary or appropriate to fulfill the purpose of the visitor’s interaction with Workout-Wars. Workout-Wars does not disclose personally-identifying information other than as described   below. And visitors can always refuse to supply personally-identifying information, with the caveat that it may prevent them from engaging in certain website-related activities.</p>
-
-      <h5>Aggregated Statistics</h5>
-      <p>Workout-Wars may collect statistics about the behavior of visitors to its websites. For instance, Workout-Wars may monitor the most popular competitions or challenges on the site. Workout-Wars may display this information publicly or provide it to others. However, Workout-Wars does not disclose personally-identifying information other than as described below.</p>
-
-      <h5>Protection of Certain Personally-Identifying Information</h5>
-      <p>Workout-Wars discloses potentially personally-identifying and personally-identifying information only to those of its employees, contractors and affiliated organizations that (i) need to know that information in order to process it on Workout-Wars behalf or to provide services available at Workout-Wars.com, and (ii) that have agreed not to disclose it to others. Some of those employees, contractors and affiliated organizations may be located outside of your home country; by using Workout-Wars website, you consent to the transfer of such information to them. Workout-Wars will not rent or sell potentially personally-identifying and personally-identifying information to anyone. Other than to its employees, contractors and affiliated organizations, as described above, Workout-Wars discloses potentially personally-identifying and personally-identifying information only in response to a subpoena, court order or other governmental request, or when Workout-Wars believes in good faith that disclosure is reasonably necessary to protect the property or rights of Workout-Wars, third parties or the public at large.If you are a registered user of an Workout-Wars website and have supplied your email address, Workout-Wars may occasionally send you an email to tell you about new features, solicit your feedback, or just keep you up to date with what’s going on with Workout-Wars and our site. If you send us a request (for example via a support email or via one of our feedback mechanisms), we reserve the right to publish it in order to help us clarify or respond to your request or to help us support other users. Workout-Wars takes all measures reasonably necessary to protect against the unauthorized access, use, alteration or destruction of potentially personally-identifying and personally-identifying information.</p>
-
-      <h5>Cookies</h5>
-      <p>A cookie is a string of information that a website stores on a visitor’s computer, and that the visitor’s browser provides to the website each time the visitor returns. Workout-Wars uses cookies to help Workout-Wars identify and track visitors, their usage of Workout-Wars website, and their website access preferences. Workout-Wars visitors who do not wish to have cookies placed on their computers should set their browsers to refuse cookies before using Workout-Wars website, with the drawback that certain features of Workout-Wars website may not function properly without the aid of cookies.</p>
-
-      <h5>Business Transfers</h5>
-      <p>If Workout-Wars, or substantially all of its assets, were acquired, or in the unlikely event that Workout-Wars goes out of business or enters bankruptcy, user information would be one of the assets that is transferred or acquired by a third party. You acknowledge that such transfers may occur, and that any acquirer of Workout-Wars may continue to use your personal information as set forth in this policy.</p>
-
-      <h5>Ads</h5>
-      <p>Ads appearing on Workout-Wars may be delivered to users by advertising partners, who may set cookies. These cookies allow the ad server to recognize your computer each time they send you an online advertisement to compile information about you or others who use your computer. This information allows ad networks to, among other things, deliver targeted advertisements that they believe will be of most interest to you. This Privacy Policy covers the use of cookies by Workout-Wars and does not cover the use of cookies by any advertisers.</p>
-
-      <h5>Privacy Policy Changes</h5>
-      <p>Although most changes are likely to be minor, Workout-Wars may change its Privacy Policy from time to time, and in Workout-Wars sole discretion. Workout-Wars encourages visitors to frequently check the site for any changes to its Privacy Policy. Your continued use of this site after any change in this Privacy Policy will constitute your acceptance of such change.</p>
+      <%= render "shared/privacy" %>
     </div>
   </div>
-
+  
   <br />
 
   <div class="row">
