--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -121,7 +121,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2013 Company, Inc. &middot; <%= link_to "Privacy", privacy_path %> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
