adds delete ability to challenge attemtps

--- a/app/assets/javascripts/templates/challenge.hbs
+++ b/app/assets/javascripts/templates/challenge.hbs
@@ -27,7 +27,11 @@
         <td>{{this.result}}</td>
         <td><strong>User</strong></td>
         <td>{{this.user.handle}}</td>
-        <td><a href="#" class="btn btn-danger btn-xs" {{action "deleteAttempt" this }}>&times;</a></td>
+        <td>
+          {{#if canDelete}}
+            <a href="#" class="btn btn-danger btn-xs" {{action "deleteAttempt" this }}>&times;</a>
+          {{/if}}
+        </td>
       </tr>
     {{else}}
       <tr>
